need to add active and hover states to the destinationnav, as well as fix the design of the pages on tablet and desktop sizes

--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.number-span {
+ @apply pl-6 pr-6 font-barlow tracking-[2.75px] pb-7 hover:border-b-2
+}
